@@ -1,16 +1,27 @@
 package com.supernova.fashionnova.admin;
 
+import com.supernova.fashionnova.answer.Answer;
+import com.supernova.fashionnova.answer.AnswerRepository;
+import com.supernova.fashionnova.answer.dto.AnswerRequestDto;
+import com.supernova.fashionnova.coupon.Coupon;
+import com.supernova.fashionnova.coupon.CouponRepository;
+import com.supernova.fashionnova.coupon.CouponType;
+import com.supernova.fashionnova.coupon.dto.CouponRequestDto;
 import com.supernova.fashionnova.global.exception.CustomException;
 import com.supernova.fashionnova.global.exception.ErrorType;
 import com.supernova.fashionnova.product.Product;
 import com.supernova.fashionnova.product.ProductDetail;
-import com.supernova.fashionnova.product.ProductDetailRepository;
 import com.supernova.fashionnova.product.ProductRepository;
 import com.supernova.fashionnova.product.dto.ProductDetailRequestDto;
 import com.supernova.fashionnova.product.dto.ProductRequestDto;
+import com.supernova.fashionnova.question.Question;
+import com.supernova.fashionnova.question.QuestionRepository;
+import com.supernova.fashionnova.question.dto.QuestionResponseDto;
 import com.supernova.fashionnova.review.Review;
 import com.supernova.fashionnova.review.ReviewRepository;
 import com.supernova.fashionnova.review.dto.ReviewResponseDto;
+import com.supernova.fashionnova.upload.FileUploadUtil;
+import com.supernova.fashionnova.upload.ImageType;
 import com.supernova.fashionnova.user.User;
 import com.supernova.fashionnova.user.UserRepository;
 import com.supernova.fashionnova.user.dto.UserResponseDto;
@@ -18,7 +29,9 @@ import com.supernova.fashionnova.warn.Warn;
 import com.supernova.fashionnova.warn.dto.WarnDeleteRequestDto;
 import com.supernova.fashionnova.warn.dto.WarnRepository;
 import com.supernova.fashionnova.warn.dto.WarnRequestDto;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
@@ -31,24 +44,26 @@ import org.springframework.transaction.annotation.Transactional;
 @RequiredArgsConstructor
 public class AdminService {
 
-    private final UserRepository userRepository;
-
-    private final WarnRepository warnRepository;
-
-    private final ReviewRepository reviewRepository;
-
     private static final int PAGE_SIZE = 30;
-    private final ProductRepository productRepository;
-    private final ProductDetailRepository productDetailRepository;
 
-    /** 유저 전체조회
+    private final UserRepository userRepository;
+    private final WarnRepository warnRepository;
+    private final ReviewRepository reviewRepository;
+    private final ProductRepository productRepository;
+    private final CouponRepository couponRepository;
+    private final AnswerRepository answerRepository;
+    private final QuestionRepository questionRepository;
+    private final FileUploadUtil fileUploadUtil;
+
+    /**
+     * 유저 전체조회
      *
      * @param page
      * @return List<UserResponseDto>
      * 사이즈는 30으로 고정해놨음
      */
     @Transactional(readOnly = true)
-    public List<UserResponseDto> getAllUsers(int page) {
+    public List<UserResponseDto> getAllUserList(int page) {
 
         Pageable pageable = PageRequest.of(page, PAGE_SIZE);
         Page<User> userPage = userRepository.findAll(pageable);
@@ -58,12 +73,13 @@ public class AdminService {
             .collect(Collectors.toList());
     }
 
-    /** 유저 경고 등록
+    /**
+     * 유저 경고 등록
      *
      * @param requestDto
      * @throws CustomException NOT_FOUND_USER 유저Id로 유저를 찾을 수 없을 때
      */
-    public void createCaution(WarnRequestDto requestDto) {
+    public void addCaution(WarnRequestDto requestDto) {
 
         User user = userRepository.findById(requestDto.getUserId())
             .orElseThrow(()-> new CustomException(ErrorType.NOT_FOUND_USER));
@@ -72,7 +88,8 @@ public class AdminService {
         warnRepository.save(warn);
     }
 
-    /** 유저 경고 삭제
+    /**
+     * 유저 경고 삭제
      *
      * @param requestDto
      * @throws CustomException NOT_FOUND_WARN 경고ID로 경고를 찾을 수 없을 때
@@ -91,25 +108,39 @@ public class AdminService {
      *
      * @param userId
      * @param page
-     * @return Page<Review>
+     * @return List<ReviewResponseDto>
      * @throws CustomException NOT_FOUND_USER 유저ID가 존재하지 않을 때
      */
     @Transactional(readOnly = true)
-    public List<ReviewResponseDto> getReviewsByUserId(Long userId, int page) {
+    public List<ReviewResponseDto> getReviewListByUserId(Long userId, int page) {
 
         User user = userRepository.findById(userId)
             .orElseThrow(() -> new CustomException(ErrorType.NOT_FOUND_USER));
 
         Pageable pageable = PageRequest.of(page, PAGE_SIZE);
         Page<Review> reviewPage = reviewRepository.findByUser(user, pageable);
+        List<Review> reviews = reviewPage.getContent();
 
-        return reviewPage.stream()
-            .map(ReviewResponseDto::new)
-            .collect(Collectors.toList());
+        // 리뷰 ID 리스트 생성
+        List<Long> reviewIds = reviews.stream().map(Review::getId).toList();
+
+        // 리뷰 이미지 다운로드
+        Map<Long, List<String>> reviewImages = fileUploadUtil.downloadImages(ImageType.REVIEW, reviewIds);
+
+
+        // ReviewResponseDto 객체 생성 및 설정
+        List<ReviewResponseDto> reviewResponseDtos = new ArrayList<>();
+        for (Review review : reviews) {
+            ReviewResponseDto dto = new ReviewResponseDto(review, reviewImages.get(review.getId())); // byte[] 리스트 설정
+            reviewResponseDtos.add(dto);
+        }
+
+
+        return reviewResponseDtos;
     }
 
     @Transactional
-    public void createProduct(ProductRequestDto requestDto) {
+    public void addProduct(ProductRequestDto requestDto) {
 
         Product product = Product.builder()
             .product(requestDto.getProduct())
@@ -154,8 +185,8 @@ public class AdminService {
     }
 
     @Transactional
-    public void updateProduct(Long productId, ProductRequestDto requestDto) {
-        Product existingProduct = productRepository.findById(productId)
+    public void updateProduct(ProductRequestDto requestDto) {
+        Product existingProduct = productRepository.findById(requestDto.getProductId())
             .orElseThrow(
                 () -> new CustomException(ErrorType.NOT_FOUND_PRODUCT));
 
@@ -177,6 +208,66 @@ public class AdminService {
             requestDto.getProductStatus()
         );
         productRepository.save(existingProduct);
+    }
+
+    /**
+     * Q&A 답변 등록
+     *
+     * @param requestDto
+     * @throws CustomException NOT_FOUND_QUESTION 문의Id로 문의를 찾을 수 없을 때
+     */
+    public void addAnswer(AnswerRequestDto requestDto) {
+
+        Question question = questionRepository.findById(requestDto.getQuestionId())
+            .orElseThrow(() -> new CustomException(ErrorType.NOT_FOUND_QUESTION));
+
+        Answer answer = Answer.builder()
+            .question(question)
+            .answer(requestDto.getAnswer())
+            .build();
+
+        answerRepository.save(answer);
+
+    }
+
+    /**
+     * Q&A 문의 전체 조회
+     *
+     * @param page
+     * @return List<QuestionResponseDto>
+     */
+    public List<QuestionResponseDto> getQuestionList(int page) {
+
+        Pageable pageable = PageRequest.of(page, PAGE_SIZE);
+        Page<Question> questionPage = questionRepository.findAll(pageable);
+
+        return questionPage.stream()
+            .map(QuestionResponseDto::new)
+            .collect(Collectors.toList());
+
+    }
+
+    /**
+     * 쿠폰 지급
+     *
+     * @param requestDto
+     * @throws CustomException NOT_FOUND_USER 유저ID가 존재하지 않을 때
+     */
+    public void addCoupon(CouponRequestDto requestDto) {
+
+        User user = userRepository.findById(requestDto.getUserId())
+            .orElseThrow(() -> new CustomException(ErrorType.NOT_FOUND_USER));
+
+        Coupon coupon = Coupon.builder()
+            .user(user)
+            .name(requestDto.getName())
+            .period(requestDto.getPeriod())
+            .sale(requestDto.getSale())
+            .type(CouponType.valueOf(requestDto.getType()))
+            .build();
+
+        couponRepository.save(coupon);
+
     }
 
 }
